Added most functionality for recipe controller
