# routes/recipe.js
@@ -6,27 +6,27 @@ const { addRecipe, updateRecipe, getRecipe, getRecipesByCategory, getRecipesByKe
 router.post('/', addRecipe);
 
 // Update recipe by id
-router.put('/:recipeId', updateRecipe);
+router.put('/updateRecipe/:recipeId', updateRecipe);
 
 // Get recipe by id
-router.get('/:recipeId', getRecipe);
+router.get('/getRecipe/:recipeId', getRecipe);
 
 // Get all recipes of a category
-router.get('/:categoryId', getRecipesByCategory);
+router.get('/getCategory/:categoryId', getRecipesByCategory);
 
 // Get recipes by keyword anywhere
-router.get('/:keywordId', getRecipesByKeyword);
+router.get('/getKeyword/:keywordId', getRecipesByKeyword);
 
 // Get recipes submitted by a user
-router.get('/:userId', getRecipesByUser);
+router.get('/getUserRecipe/:userId', getRecipesByUser);
 
 // Delete recipe by id
-router.delete('/:recipeId', deleteRecipe);
+router.delete('/deleteRecipe/:recipeId', deleteRecipe);
 
 // Add recipe image
-router.post('/:recipeId/uploadImage', addRecipeImage);
+router.post('/uploadImage/:recipeId', addRecipeImage);
 
 // Delete recipe image
-router.delete('/:recipeId/deleteImage', removeRecipeImage);
+router.delete('/deleteImage/:recipeId', removeRecipeImage);
 
 module.exports = router;
